--- a/index.html
+++ b/index.html
@@ -10,6 +10,16 @@
     <title>Love Running</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <header>Header</header>
+    <section>
+        Main Image
+    </section>
+    <section>
+        Club Ethos
+    </section>
+    <section>
+        Running locations, distances, times
+    </section>
+    <footer>Social links here</footer>
 </body>
 </html>
