--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
         </nav>
     </header>
-    <section>
-        Main Image
+    <section id="hero-outer">
+        <div id="hero-image"> </div>
     </section>
     <section>
         Club Ethos
