--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </div>
     </section>
     <footer>
-        <ul>
+        <ul class="social-networks">
             <li>
                 <a href="http://facebook.com" target="_blank" rel="noopener" aria-label="Visit our facebook page(opens in a new tab)"><i class="fab fa-facebook"></i></a>
             </li>
