Add core html elements to gallery.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <a href="#">Sign Up</a>
                 </li>
                 <li>
-                    <a href="#">Gallery</a>
+                    <a href="gallery.html">Gallery</a>
                 </li>
                 <li>
                     <a href="index.html" class="active">Home</a>
@@ -70,6 +70,7 @@
             </div>
         </div>
     </section>
+    
     <section id="times">
         <div>
             <h2>Urban<i class="fas fa-city"></i></h2>
