Add gallery images and masonry style

--- a/gallery.html
+++ b/gallery.html
@@ -30,7 +30,17 @@
 
         </nav>
     </header>
-
+    <section id="photos">
+        <img src="assets/images/athletes.jpg" alt="Two athletes running">
+        <img src="assets/images/girls.jpg" alt="Girls running">
+        <img src="assets/images/man.jpg" alt="Man running">
+        <img src="assets/images/mud-run.jpg" alt="Mud run">
+        <img src="assets/images/runner1.jpg" alt="Runner">
+        <img src="assets/images/runner2.jpg" alt="Runner">
+        <img src="assets/images/runner3.jpg" alt="Runner">
+        <img src="assets/images/runner4.jpg" alt="Runner">
+        <img src="assets/images/running_gang.jpg" alt="Group running">
+    </section>
     <footer>
         <ul class="social-networks">
             <li>
