--- a/signup.html
+++ b/signup.html
@@ -33,7 +33,7 @@
             </ul>
         </nav>
     </header>
-    <section class="form-section signup-form">
+    <section class="form-section">
         <form method="POST" action="https://formdump.codeinstitute.net/" class="signup-form">
             <h2>Let's get you signed up!<i class="fas fa-heartbeat"></i></h2>
             <label for="fname">First Name</label>
@@ -55,12 +55,21 @@
             <input class="join-button" type="submit" value="Let's Run!" class="join-button">
         </form>
     </section>
+   
     <footer>
         <ul class="social-networks">
-            <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a></li>
-            <li><a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
-            <li><a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube"></i></a></li>
-            <li><a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a></li>
+            <li>
+                <a href="http://facebook.com" target="_blank" rel="noopener" aria-label="Visit our facebook page(opens in a new tab)"><i class="fab fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="http://twitter.com" target="_blank" rel="noopener" aria-label="Visit our twitter page(opens in a new tab)"><i class="fab fa-twitter"></i></a>
+            </li>
+            <li>
+                <a href="http://youtube.com" target="_blank" rel="noopener" aria-label="Visit our youtube page(opens in a new tab)"><i class="fab fa-youtube"></i></a>
+            </li>
+            <li>
+                <a href="http://instagram.com" target="_blank" rel="noopener" aria-label="Visit our instagram page(opens in a new tab)"><i class="fab fa-instagram"></i></a>
+            </li>
         </ul>
     </footer>
 
